infra/kubernetes/account-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
