infra/kubernetes/account-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-service
spec:
  ingressClassName: nginx
  rules:
    - host: bank.local
      http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 8082
